--- a/web/welcome.html
+++ b/web/welcome.html
@@ -1,5 +1,3 @@
->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,19 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="container">
-                <div class="logo">
-                    <img src="Reunion.webp" alt="Your Startup Logo">
-                    <h1>Reunion</h1>
-                </div>
+        <div class="container">
+            <div class="logo">
+                <img src="Reunion.webp" alt="Your Startup Logo">
+                <h1>Reunion</h1>
                 <ul class="menu-right">
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="higher"><a href="login.html">Login</a></li>
+                    <li class="higher"><a href="#features">Features</a></li>
+                    <li class="higher"><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-        </nav>
+           
+        </div>
     </header>
 
     <section class="hero">
