--- a/web/welcome.html
+++ b/web/welcome.html
@@ -32,7 +32,7 @@
 
     <section class="features" id="features">
         <div class="container">
-            <h3>Key Features</h3>
+            <h3>Features</h3>
             <div class="feature">
                 <i class="fas fa-check-circle"></i>
                 <h4>Fast</h4>
